# django-bankreader

./: .bumpversion.cfg  MANIFEST.in  README.rst  manage.py  messages  pyproject.toml  setup.cfg  setup.py  tox.ini
bankreader/: admin.py  apps.py  models.py
bankreader/locale/cs/LC_MESSAGES/: django.mo  django.po
bankreader/management/commands/: loadbankstatement.py
bankreader/migrations/: 0001_initial.py  0002_transaction_account_statement.py  0003_transaction_account_statement_cleanup.py  0004_defaults.py
bankreader/readers/: __init__.py  base.py  best.py  csv.py  gpc.py  mt940.py
bankreader_demo/: settings.py  urls.py  wsgi.py
bankreader_demo/demoapp/: __init__.py  admin.py  apps.py  models.py  readers.py
bankreader_demo/demoapp/migrations/: 0001_initial.py
