[tool.black]
line-length = 120

[tool.flake8]
# exclude = "bankreader/migrations"
max-line-length = 120

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
profile = "black"
skip_glob = "*migrations*"
use_parentheses = true

[tool.mypy]
# warn_return_any = true
# warn_unused_configs = true
# exclude = [
#    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
#    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
#]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

#[[tool.mypy.overrides]]
#module = "mycode.foo.*"
#disallow_untyped_defs = true

[tool.django-stubs]
django_settings_module = "bankreader_demo.settings"
# if true, all unknown settings in django.conf.settings will fallback to Any,
# specify it if your settings are loaded dynamically to avoid false positives
# ignore_missing_settings = true

[tool.poetry]
name = "django-bankreader"
version = "1.3.0"
description = "Pluggable django application for reading and processing various formats of bank account statements"
authors = ["Jakub Dorňák <jakub.dornak@misli.cz>"]
license = "BSD-3-Clause"
packages = [
    { include = "bankreader" },
    { include = "bankreader_demo" },
]
readme = "README.rst"
repository = "https://github.com/misli/django-bankreader"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: Czech",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.10"
Django = ">=3.0,<4"
django-localflavor = "*"
mt-940 = "*"

[tool.poetry.dev-dependencies]
black = "*"
autoflake = "*"
isort = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
django-stubs = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.3.0"]
